[gd_scene load_steps=7 format=3 uid="uid://0tndp7tgw7ms"]

[ext_resource type="Script" path="res://scripts/mainarea_multiplaer.gd" id="1_835vx"]
[ext_resource type="Script" path="res://scripts/hud_multiplayer.gd" id="2_6645h"]
[ext_resource type="Script" path="res://scripts/multiplayer_camera.gd" id="2_ycib1"]
[ext_resource type="Script" path="res://scripts/winner_multiplayer.gd" id="3_lqntj"]
[ext_resource type="AudioStream" uid="uid://ce50ua8skqwex" path="res://assets/321.mp3" id="5_h3hl7"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ua31s"]
properties/0/path = NodePath(".:is_big_map")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:starting")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="mainarea" type="Node2D"]
script = ExtResource("1_835vx")

[node name="camera" type="Camera2D" parent="." node_paths=PackedStringArray("main_area")]
limit_left = -2704
limit_top = -1378
limit_right = 2704
limit_bottom = 1378
position_smoothing_enabled = true
script = ExtResource("2_ycib1")
main_area = NodePath("..")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("2_6645h")

[node name="GETOUT" type="Button" parent="HUD"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="winner" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -11.5
offset_right = 32.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "PLAYER 1 WON!!!"
script = ExtResource("3_lqntj")

[node name="timer" type="Timer" parent="HUD/winner"]
wait_time = 3.0
one_shot = true

[node name="ready" type="CheckBox" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -91.5
offset_right = 203.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 128
text = "Ready"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/tank_multiplaeer.tscn", "res://scenes/bullet_multiplaer.tscn", "res://scenes/thicc_main_area_multiplayer.tscn", "res://scenes/main_area_template.tscn")
spawn_path = NodePath("..")

[node name="ready_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ua31s")

[node name="321" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_h3hl7")

[connection signal="pressed" from="HUD/GETOUT" to="HUD" method="_on_getout_pressed"]
[connection signal="timeout" from="HUD/winner/timer" to="HUD/winner" method="_on_timer_timeout"]
[connection signal="toggled" from="HUD/ready" to="." method="_on_ready_toggled"]
[connection signal="timeout" from="ready_timer" to="." method="_on_ready_timer_timeout"]
